Test/test0/BadQuantifier.bpl.expect
BadQuantifier.bpl(5,15): error: invalid QuantifierBody
1 parse errors detected in BadQuantifier.bpl
